[package]
name = "garbler"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

# [dependencies]
# uncomment the dependencies below when debugging with wasm-bindgen
# wasm-bindgen = "0.2"
# console_error_panic_hook = "0.1.7"
# web-sys = { version = "0.3.56", features = ['console'] }